--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "Igor <igoryakib@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "commander": "^9.2.0"
+    "colors": "^1.4.0",
+    "commander": "^9.2.0",
+    "nanoid": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
